# opentxs-proto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.txt
src/: CMakeLists.txt
src/opentxs-proto/: APIArgument.proto  AcceptPendingPayment.proto  AccountData.proto  AccountEvent.proto  AddClaim.proto  AddContact.proto  AsymmetricKey.proto  Authority.proto  Bailment.proto  BailmentReply.proto  BasketItem.proto  BasketParams.proto  Bip44Account.proto  Bip44Address.proto  Bip47Address.proto  Bip47Chain.proto  Bip47Channel.proto  Bip47Context.proto  Bip47Direction.proto  BitcoinBlockHeaderFields.proto  BlindedSeriesList.proto  BlockchainActivity.proto  BlockchainAddress.proto  BlockchainBlockHeader.proto  BlockchainBlockLocalData.proto  BlockchainEnums.proto  BlockchainExternalAddress.proto  BlockchainFilterHeader.proto  BlockchainInputWitness.proto  BlockchainPeerAddress.proto  BlockchainPreviousOutput.proto  BlockchainTransaction.proto  BlockchainTransactionInput.proto  BlockchainTransactionOutput.proto  BlockchainWalletKey.proto  CMakeLists.txt  CashEnums.proto  ChildCredentialParameters.proto  Ciphertext.proto  Claim.proto  (+125 more)
src/proto/: AsymmetricKey.proto  CMakeLists.txt  ChildCredentialParameters.proto  Claim.proto  ContactEnums.proto  ContactItem.proto  ContactSection.proto  Credential.proto  CredentialIndex.proto  CredentialSet.proto  CurrencyParams.proto  Enums.proto  EquityParams.proto  HDPath.proto  KeyCredential.proto  ListenAddress.proto  MasterCredentialParameters.proto  NymIDSource.proto  PaymentCode.proto  Signature.proto  SourceProof.proto  StorageCredentials.proto  StorageItemHash.proto  StorageItems.proto  StorageNymList.proto  StorageRoot.proto  Verification.proto  VerificationIdentity.proto  VerificationSet.proto
src/verify/: CMakeLists.txt  Check.cpp  Check.hpp  Contact.cpp  Variables.cpp  VerifyBlockchain.cpp  VerifyCash.cpp  VerifyConsensus.cpp  VerifyContacts.cpp  VerifyContracts.cpp  VerifyCredentials.cpp  VerifyOTX.cpp  VerifyPeer.cpp  VerifyRPC.cpp  VerifyStorage.cpp  VerifyWorkflows.cpp
src/verify/acceptpendingpayment/: AcceptPendingPayment_1.cpp
src/verify/accountdata/: AccountData_1.cpp
src/verify/accountevent/: AccountEvent_1.cpp  AccountEvent_2.cpp
src/verify/addclaim/: AddClaim_1.cpp
src/verify/addcontact/: AddContact_1.cpp
src/verify/apiargument/: APIArgument_1.cpp
src/verify/asymmetrickey/: AsymmetricKey.cpp  AsymmetricKey_1.cpp
src/verify/authority/: Authority_1.cpp
src/verify/bailment/: Bailment_1.cpp
src/verify/bailmentreply/: BailmentReply_1.cpp
src/verify/basketitem/: BasketItem_1.cpp
src/verify/basketparams/: BasketParams_1.cpp
src/verify/bip44account/: Bip44Account_1.cpp
src/verify/bip44address/: Bip44Address_1.cpp
src/verify/bip47address/: Bip47Address_1.cpp
src/verify/bip47chain/: Bip47Chain_1.cpp
src/verify/bip47channel/: Bip47Channel_1.cpp
src/verify/bip47context/: Bip47Context_1.cpp
src/verify/bip47direction/: Bip47Direction_1.cpp
src/verify/bitcoinblockheaderfields/: BitcoinBlockHeaderFields_1.cpp
src/verify/blindedserieslist/: BlindedSeriesList.cpp
src/verify/blockchainactivity/: BlockchainActivity_1.cpp
src/verify/blockchainaddress/: BlockchainAddress_1.cpp
src/verify/blockchainblockheader/: BlockchainBlockHeader_1.cpp
src/verify/blockchainblocklocaldata/: BlockchainBlockLocalData_1.cpp
src/verify/blockchainexternaladdress/: BlockchainExternalAddress_1.cpp
src/verify/blockchainfilterheader/: BlockchainFilterHeader_1.cpp
src/verify/blockchaininputwitness/: BlockchainInputWitness_1.cpp
src/verify/blockchainpeeraddress/: BlockchainPeerAddress_1.cpp
src/verify/blockchainpreviousoutput/: BlockchainPreviousOutput_1.cpp
src/verify/blockchaintransaction/: BlockchainTransaction_1.cpp
src/verify/blockchaintransactioninput/: BlockchainTransactionInput_1.cpp
src/verify/blockchaintransactionoutput/: BlockchainTransactionOutput_1.cpp
src/verify/blockchainwalletkey/: BlockchainWalletKey_1.cpp
src/verify/childcredentialparameters/: ChildCredentialParameters.cpp  ChildCredentialParameters_1.cpp
src/verify/ciphertext/: Ciphertext_1.cpp
src/verify/claim/: Claim.cpp  Claim_1.cpp
src/verify/clientcontext/: ClientContext_1.cpp
src/verify/connectioninfo/: ConnectionInfo_1.cpp
src/verify/connectioninforeply/: ConnectionInfoReply_1.cpp
src/verify/contact/: Contact_1.cpp
src/verify/contactdata/: ContactData.cpp  ContactData_1.cpp
src/verify/contactevent/: ContactEvent_1.cpp
src/verify/contactitem/: ContactItem.cpp  ContactItem_1.cpp
src/verify/contactsection/: ContactSection.cpp  ContactSection_1.cpp
src/verify/context/: Context_1.cpp
src/verify/createinstrumentdefinition/: CreateInstrumentDefinition_1.cpp
src/verify/createnym/: CreateNym_1.cpp
src/verify/credential/: Credential.cpp  Credential_1.cpp
src/verify/credentialindex/: CredentialIndex.cpp  CredentialIndex_1.cpp
src/verify/credentialset/: CredentialSet.cpp  CredentialSet_1.cpp
src/verify/currencyparams/: CurrencyParams_1.cpp
src/verify/envelope/: Envelope_1.cpp
src/verify/equityparams/: EquityParams_1.cpp
src/verify/ethereumblockheaderfields/: EthereumBlockHeaderFields_1.cpp
src/verify/faucet/: Faucet_1.cpp
src/verify/gcs/: GCS_1.cpp
src/verify/getworkflow/: GetWorkflow_1.cpp
src/verify/hdaccount/: HDAccount_1.cpp
src/verify/hdpath/: HDPath.cpp  HDPath_1.cpp
src/verify/hdseed/: HDSeed_1.cpp
src/verify/issuer/: Issuer_1.cpp
tests/: CMakeLists.txt  main.cpp
tests/bip47/: CMakeLists.txt  Test_Bip47Address.cpp  Test_Bip47Chain.cpp  Test_Bip47Channel.cpp  Test_Bip47Context.cpp  Test_Bip47Direction.cpp  main.cpp
tests/storage_bip47/: CMakeLists.txt  Test_StorageBip47AddressIndex.cpp  Test_StorageBip47ChannelList.cpp  Test_StorageBip47Contexts.cpp  Test_StorageBip47NymAddressIndex.cpp  main.cpp
tests/storage_nym/: CMakeLists.txt  Test_StorageNym.cpp  main.cpp
tests/storage_nymlist/: CMakeLists.txt  Test_StorageNymList.cpp
tests/storagebip47channellist/: CMakeLists.txt  Test_StorageBip47ChannelList.cpp
tests/storagenym/: CMakeLists.txt  Test_StorageNym.cpp
(+333 files in other folders)
